Change Notes
=============

2010-07-16 FLI
	- Added integrity check
	
2010-07-14 jbornema
	- IETLProcess.addTransformer(ITransformer transformer, int index) added
	- ETLProcess property scriptFilename added which is set with the groovy script it was created by,
	  used by getResourceAsStream and getResourceAsOutputStream to find the folder to access resources in there
	- ProcessChain sets scriptFilename in ETLProcess
	- MeasureMapping added support for fixed null values when columnName is null as well
	- JDBCLoader "replace on" feature added that replaces exiting records user the auto increment PK and a list
	  of columns used as "replace on". Properties replaceOnColumns and replaceOnAutoIncrementColumn added.
	  JDBCLoader injects a local transformer at index 0 to call postSourceProcessing early.
	- ZipSources auto registers as a process finalizer to close the zip.   

2010-06-29 RPF
	- Fixed a Bug in ZipSource (was opened twice which caused IO file lock)

2010-06-16 RPF
	- Added 'AutoDirectoryMode' in XLSFileSource. This will make it possible to import any file type (xls, xlsx) if
	  only a directory is set as a source File
	- Added directory and file prefix usage in ZipSource. It is possible now to give a directory (first zip found is taken)
	  and an optional File Prefix, then the first file matching the prefix is taken (first zip, if no matching)
	- ZipSource throws an ETLException now, if no files can be found to avoid NullPointerException
	- Fixed ZipSource/MoveFileFinalizer: if only a target path was set, the ZipSource didn't work!
	  
2010-05-14 FLI
	- Added possibility to seal/unseal a dimension
	
2010-05-12 FLI
	- DimensionEditor and MappingEditor now allows "Mass Insert" of dimensions and mappings
	- Added "Auto Assign" feature during insert, mainly for Mass Insert to automatically find a matching dimension element.
	
2010-05-10 FLI
	- CSVLoader is now able to write the output file directly into a ZIP archive.